k8s/apps/dev/solar/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: solar-http
  namespace: solar
spec:
  parentRefs:
    - name: insecure
      namespace: gateway
  hostnames:
    - "solar.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sun
      backendRefs:
        - name: sun
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /moon
      backendRefs:
        - name: moon
          port: 80
---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: sun-http
#   namespace: solar
# spec:
#   parentRefs:
#     - name: insecure
#       namespace: gateway
#   hostnames:
#     - sun.local
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: sun
#           port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: moon-http
#   namespace: solar
# spec:
#   parentRefs:
#     - name: insecure
#       namespace: gateway
#   hostnames:
#     - moon.local
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: moon
#           port: 80
