k8s/apps/dev/solar/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: solar-https
  namespace: solar
spec:
  parentRefs:
    - name: internal-production
      namespace: gateway
  hostnames:
    - "solar.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sun
      backendRefs:
        - name: sun
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /moon
      backendRefs:
        - name: moon
          port: 80
